loggin en el backend + cambiados console log por logger + arreglados test service
